NEW 283528
Web locks is not released after page navigated / refreshed
https://bugs.webkit.org/show_bug.cgi?id=283528
Summary Web locks is not released after page navigated / refreshed
singeeking
Reported 2024-11-21 16:09:58 PST
After a page unload, the web locks (navigator.locks) do not released correctly ## Quick Reproduce Open a new window, open the console, check the "Preserve log", and open https://imsingee.github.io/safari-web-worker-behaviour In chrome, the output will like ``` [load] Current locks: {held: Array(0), pending: Array(0)} [after request] Current locks: {held: Array(1), pending: Array(0)} ====== REFRESH PAGE ====== [load] Current locks: {held: Array(0), pending: Array(0)} (<- should be empty) ====== END ====== ``` But in Safari, the output will like ``` [load] Current locks: {held: Array(0), pending: Array(0)} [after request] Current locks: {held: Array(1), pending: Array(0)} ====== REFRESH PAGE ====== [load] Current locks: {held: Array(1), pending: Array(1)} (<- NOTE: not empty) ====== END ====== ``` the `Current locks` should be empty after refresh, but not
Attachments
rendering in safari, firefox, chrome (1.30 MB, image/png)
2024-11-21 20:14 PST, Karl Dubost
no flags
Karl Dubost
Comment 1 2024-11-21 20:14:49 PST
Created attachment 473326 [details] rendering in safari, firefox, chrome Safari: held: [{clientId: "35fe0531-64b2-4c97-8a02-a0e063e1e764", mode: "exclusive", name: "lock1"}] (1) Firefox: { held: [], pending: [] } Chrome: {held: Array(0), pending: Array(0)} Safari Technology Preview 207 20621.1.4.3 Firefox Nightly 134.0a1 13424.11.17 Google Chrome Canary 133.0.6851.0 6851.0
Radar WebKit Bug Importer
Comment 2 2024-11-21 22:53:28 PST
Note You need to log in before you can comment on or make changes to this bug.