Web locks is not released after page navigated / refreshed https://bugs.webkit.org/show_bug.cgi?id=283528 rdar://140399284

Reviewed by Chris Dumez.

When a page holding WebLocks enters the Back/Forward Cache (BFCache), the locks were not being released properly.
This caused locks remain held while page is in BFCache. The WebLockManager and its locks stay alive in the
suspended page

The core issue is that pages in BFCache maintain their JavaScript context and objects (including WebLockManager),
but should release shared resources like locks to avoid blocking other pages.

To solve this, override `WebLockManager::suspend()` to release locks when pages enter BFCache. Also reject all
promise before clearing from the lock manager.

Added LayoutTest to verify BFCache-specific behavior.

* LayoutTests/http/wpt/web-locks/back-forward-cache-suspend-test.https-expected.txt: Added.
* LayoutTests/http/wpt/web-locks/back-forward-cache-suspend-test.https.html: Added.
* LayoutTests/http/wpt/web-locks/resources/bfcache-helper.html: Added.
* Source/WebCore/Modules/web-locks/WebLockManager.cpp:
(WebCore::WebLockManager::clientIsGoingAway):
(WebCore::WebLockManager::suspend):
* Source/WebCore/Modules/web-locks/WebLockManager.h:

Canonical link: https://commits.webkit.org/297294@main